# The_Payne

./: .gitignore  LICENSE.txt  README.md  fitting.py  process_spectra.py  pyproject.toml  setup.py  spectral_model.py  training.py  tutorial.ipynb  utils.py
The_Payne/: __init__.py  fitter.py  fitting.py  predictor.py  process_spectra.py  radam.py  spectral_model.py  train_NN_spectral_model.py  trainer.py  training.py  training_old.py  utils.py
The_Payne/other_data/: apogee_mask.npz  apogee_wavelength.npz  cannon_cont_pixels_apogee.npz
neural_nets/: NN_Teff2_logg2.npz  NN_normalized_spectra.npz  NN_radius.npz  NN_unnormalized_spectra.npz
other_data/: apogee_visit_wavelength.npz  labels_for_20000_mock_dwarf_dwarf_binaries.npz
spectra/combined/: spectrum_ap_id_2M13012770+5754582_.npz
spectra/visit/: visit_spectra_ap_id_2M06133561+2433362_.npz
train_NNs/: convolve_highrez_spectra_to_given_R.py  train_NN_Teff2_logg2.py  train_NN_radius.py  train_NN_spectral_model.py
